// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component sanity matches danger variant snapshot 1`] = `
<Styled(Box)
  aria-describedby="Flash4Content"
  aria-live="polite"
  border="1"
  borderRadius={1}
  p="3"
  role="alert"
  tabIndex={0}
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "buttonSizes": Object {
        "large": Object {
          "fontSize": "1.5rem",
          "height": "4rem",
          "minWidth": "4rem",
        },
        "medium": Object {
          "fontSize": "1rem",
          "height": "3rem",
          "minWidth": "3rem",
        },
        "small": Object {
          "fontSize": "0.75rem",
          "height": "2rem",
          "minWidth": "2rem",
          "padding": "0 1rem",
        },
      },
      "buttons": Object {
        "danger": Object {
          "--contrast-color": "#fff",
          "--main-color": "#DC2C10",
        },
        "primary": Object {
          "--contrast-color": "#fff",
          "--main-color": "#4E3FCE",
          "backgroundColor": "#4E3FCE",
          "color": "#fff",
        },
        "success": Object {
          "--contrast-color": "#FFF",
          "--main-color": "#28C081",
        },
      },
      "colors": Object {
        "black": "#000e1a",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#3259D6",
        "copyColor": "#3F3D4B",
        "danger": "#DC2C10",
        "dark-gray": "#333",
        "grey": "#CCC",
        "info": "#36ADF1",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "primary-dark": "#3e32a4",
        "primary-light": "#7165d7",
        "silver": "#999",
        "success": "#28C081",
        "transparent": "transparent",
        "warning": "#FD9D28",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "heights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "maxHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "maxWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
        512,
        768,
        1024,
        1536,
      ],
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#AAA",
          "color": "#666",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "minHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "minWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0px 8px 16px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "width": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="danger"
  width="100%"
>
  <Text
    color="inherit"
    display="inherit"
    fontFamily="sansSerif"
    fontSize={2}
    fontWeight={2}
    id="Flash4Content"
    lineHeight="copy"
    textAlign="left"
  >
    Danger Flash
  </Text>
</Styled(Box)>
`;

exports[`Select component sanity matches default snapshot 1`] = `
<Styled(Box)
  aria-describedby="Flash0Content"
  aria-live="polite"
  border="1"
  borderRadius={1}
  p="3"
  role="status"
  tabIndex={0}
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "buttonSizes": Object {
        "large": Object {
          "fontSize": "1.5rem",
          "height": "4rem",
          "minWidth": "4rem",
        },
        "medium": Object {
          "fontSize": "1rem",
          "height": "3rem",
          "minWidth": "3rem",
        },
        "small": Object {
          "fontSize": "0.75rem",
          "height": "2rem",
          "minWidth": "2rem",
          "padding": "0 1rem",
        },
      },
      "buttons": Object {
        "danger": Object {
          "--contrast-color": "#fff",
          "--main-color": "#DC2C10",
        },
        "primary": Object {
          "--contrast-color": "#fff",
          "--main-color": "#4E3FCE",
          "backgroundColor": "#4E3FCE",
          "color": "#fff",
        },
        "success": Object {
          "--contrast-color": "#FFF",
          "--main-color": "#28C081",
        },
      },
      "colors": Object {
        "black": "#000e1a",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#3259D6",
        "copyColor": "#3F3D4B",
        "danger": "#DC2C10",
        "dark-gray": "#333",
        "grey": "#CCC",
        "info": "#36ADF1",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "primary-dark": "#3e32a4",
        "primary-light": "#7165d7",
        "silver": "#999",
        "success": "#28C081",
        "transparent": "transparent",
        "warning": "#FD9D28",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "heights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "maxHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "maxWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
        512,
        768,
        1024,
        1536,
      ],
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#AAA",
          "color": "#666",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "minHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "minWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0px 8px 16px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "width": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="base"
  width="100%"
>
  <Text
    color="inherit"
    display="inherit"
    fontFamily="sansSerif"
    fontSize={2}
    fontWeight={2}
    id="Flash0Content"
    lineHeight="copy"
    textAlign="left"
  >
    Default Flash
  </Text>
</Styled(Box)>
`;

exports[`Select component sanity matches info variant snapshot 1`] = `
<Styled(Box)
  aria-describedby="Flash1Content"
  aria-live="polite"
  border="1"
  borderRadius={1}
  p="3"
  role="status"
  tabIndex={0}
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "buttonSizes": Object {
        "large": Object {
          "fontSize": "1.5rem",
          "height": "4rem",
          "minWidth": "4rem",
        },
        "medium": Object {
          "fontSize": "1rem",
          "height": "3rem",
          "minWidth": "3rem",
        },
        "small": Object {
          "fontSize": "0.75rem",
          "height": "2rem",
          "minWidth": "2rem",
          "padding": "0 1rem",
        },
      },
      "buttons": Object {
        "danger": Object {
          "--contrast-color": "#fff",
          "--main-color": "#DC2C10",
        },
        "primary": Object {
          "--contrast-color": "#fff",
          "--main-color": "#4E3FCE",
          "backgroundColor": "#4E3FCE",
          "color": "#fff",
        },
        "success": Object {
          "--contrast-color": "#FFF",
          "--main-color": "#28C081",
        },
      },
      "colors": Object {
        "black": "#000e1a",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#3259D6",
        "copyColor": "#3F3D4B",
        "danger": "#DC2C10",
        "dark-gray": "#333",
        "grey": "#CCC",
        "info": "#36ADF1",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "primary-dark": "#3e32a4",
        "primary-light": "#7165d7",
        "silver": "#999",
        "success": "#28C081",
        "transparent": "transparent",
        "warning": "#FD9D28",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "heights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "maxHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "maxWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
        512,
        768,
        1024,
        1536,
      ],
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#AAA",
          "color": "#666",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "minHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "minWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0px 8px 16px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "width": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="info"
  width="100%"
>
  <Text
    color="inherit"
    display="inherit"
    fontFamily="sansSerif"
    fontSize={2}
    fontWeight={2}
    id="Flash1Content"
    lineHeight="copy"
    textAlign="left"
  >
    Info Flash
  </Text>
</Styled(Box)>
`;

exports[`Select component sanity matches success variant snapshot 1`] = `
<Styled(Box)
  aria-describedby="Flash2Content"
  aria-live="polite"
  border="1"
  borderRadius={1}
  p="3"
  role="status"
  tabIndex={0}
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "buttonSizes": Object {
        "large": Object {
          "fontSize": "1.5rem",
          "height": "4rem",
          "minWidth": "4rem",
        },
        "medium": Object {
          "fontSize": "1rem",
          "height": "3rem",
          "minWidth": "3rem",
        },
        "small": Object {
          "fontSize": "0.75rem",
          "height": "2rem",
          "minWidth": "2rem",
          "padding": "0 1rem",
        },
      },
      "buttons": Object {
        "danger": Object {
          "--contrast-color": "#fff",
          "--main-color": "#DC2C10",
        },
        "primary": Object {
          "--contrast-color": "#fff",
          "--main-color": "#4E3FCE",
          "backgroundColor": "#4E3FCE",
          "color": "#fff",
        },
        "success": Object {
          "--contrast-color": "#FFF",
          "--main-color": "#28C081",
        },
      },
      "colors": Object {
        "black": "#000e1a",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#3259D6",
        "copyColor": "#3F3D4B",
        "danger": "#DC2C10",
        "dark-gray": "#333",
        "grey": "#CCC",
        "info": "#36ADF1",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "primary-dark": "#3e32a4",
        "primary-light": "#7165d7",
        "silver": "#999",
        "success": "#28C081",
        "transparent": "transparent",
        "warning": "#FD9D28",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "heights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "maxHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "maxWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
        512,
        768,
        1024,
        1536,
      ],
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#AAA",
          "color": "#666",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "minHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "minWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0px 8px 16px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "width": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="success"
  width="100%"
>
  <Text
    color="inherit"
    display="inherit"
    fontFamily="sansSerif"
    fontSize={2}
    fontWeight={2}
    id="Flash2Content"
    lineHeight="copy"
    textAlign="left"
  >
    Success Flash
  </Text>
</Styled(Box)>
`;

exports[`Select component sanity matches themed snapshot 1`] = `
.c2 {
  padding: 16px;
  width: 100%;
  border: 1px solid transparent;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
}

.c4 {
  color: inherit;
  display: inherit;
}

.c4 {
  box-sizing: border-box;
}

.c3 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  text-align: left;
  color: inherit;
  display: inherit;
}

.c1 {
  color: #666;
  background-color: #f6f6f6;
  border-color: #AAA;
}

.c1 {
  position: relative;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <div
    aria-describedby="Flash5Content"
    aria-live="polite"
    class="c1 c2"
    role="status"
    tabindex="0"
    width="100%"
  >
    <div
      class="c3 c4"
      color="inherit"
      display="inherit"
      font-family="sansSerif"
      font-size="2"
      font-weight="2"
      id="Flash5Content"
    >
      Flash
    </div>
  </div>
</div>
`;

exports[`Select component sanity matches warning variant snapshot 1`] = `
<Styled(Box)
  aria-describedby="Flash3Content"
  aria-live="polite"
  border="1"
  borderRadius={1}
  p="3"
  role="alert"
  tabIndex={0}
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "buttonSizes": Object {
        "large": Object {
          "fontSize": "1.5rem",
          "height": "4rem",
          "minWidth": "4rem",
        },
        "medium": Object {
          "fontSize": "1rem",
          "height": "3rem",
          "minWidth": "3rem",
        },
        "small": Object {
          "fontSize": "0.75rem",
          "height": "2rem",
          "minWidth": "2rem",
          "padding": "0 1rem",
        },
      },
      "buttons": Object {
        "danger": Object {
          "--contrast-color": "#fff",
          "--main-color": "#DC2C10",
        },
        "primary": Object {
          "--contrast-color": "#fff",
          "--main-color": "#4E3FCE",
          "backgroundColor": "#4E3FCE",
          "color": "#fff",
        },
        "success": Object {
          "--contrast-color": "#FFF",
          "--main-color": "#28C081",
        },
      },
      "colors": Object {
        "black": "#000e1a",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#3259D6",
        "copyColor": "#3F3D4B",
        "danger": "#DC2C10",
        "dark-gray": "#333",
        "grey": "#CCC",
        "info": "#36ADF1",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "primary-dark": "#3e32a4",
        "primary-light": "#7165d7",
        "silver": "#999",
        "success": "#28C081",
        "transparent": "transparent",
        "warning": "#FD9D28",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "heights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "maxHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "maxWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
        512,
        768,
        1024,
        1536,
      ],
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#AAA",
          "color": "#666",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "minHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "minWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0px 8px 16px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "width": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="warning"
  width="100%"
>
  <Text
    color="inherit"
    display="inherit"
    fontFamily="sansSerif"
    fontSize={2}
    fontWeight={2}
    id="Flash3Content"
    lineHeight="copy"
    textAlign="left"
  >
    Warning Flash
  </Text>
</Styled(Box)>
`;
